using System;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public enum Boss1State
{
    Idle,
    Walk,
    Jump,
    Pattern1,
    Pattern2,
    NormalAttack,
    RollComboAttack,
    WaveAttack,
    SequenceAttack,
    BackAttack,
    SwingAttack,
    Roll
}


public enum Boss1TState
{
    Idle,
    Walk,
    Roll,
    ChopAttack,
    SwingAttack,
    SequnceAttack,
    JumpAttack,
    BackAttack,
    WaveAttack,
    UppercutAttack,
}